--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "accept-language": "^3.0.20",
+    "flowbite-react": "^0.10.1",
+    "i18next": "^23.13.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-resources-to-backend": "^1.2.1",
+    "next": "14.2.5",
+    "next-i18n-router": "^5.5.1",
+    "next-i18next": "^15.3.1",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-i18next": "^15.0.1",
+    "react-icons": "^5.2.1",
+    "swiper": "^11.1.9",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.20",
+    "i18nexus-cli": "^3.5.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9"
   }
 }
