--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "accept-language": "^3.0.20",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.5.4",
     "i18next": "^23.13.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
