--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@hookform/resolvers": "^3.9.0",
     "accept-language": "^3.0.20",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.4",
@@ -21,10 +23,12 @@
     "react": "^18",
     "react-cookie": "^7.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.9",
-    "tw-elements": "^2.0.0"
+    "tw-elements": "^2.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
